# agent-definition-protocol

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  roadmap.md
.github/workflows/: ci.yml
cli/: README.md  pyproject.toml
cli/adp_cli/: __init__.py  main.py  models_acs.py  models_adp.py  packaging_adpkg.py  validators.py
cli/tests/: test_cli.py
docs/: acs-spec.md  adp-spec.md  adpkg-spec.md  architecture.md  getting-started.md  index.md  roadmap.md  use-cases.md
examples/acme-analytics/: pack.sh
examples/adp/: acme-full-agent.yaml
examples/composition/: acme-inheritance-example.yaml
examples/evaluation/: acme-eval-suite.yaml
examples/flow/: acme-flow-example.yaml
examples/minimal/: acme-minimal.yaml
examples/oci-package/: README.md  index.json  oci-layout
examples/runtime/: acme-runtime-example.yaml
fixtures/: adp_full.yaml  adp_v0.2.0.yaml
fixtures/negative/: invalid_adp_missing_runtime.yaml  invalid_eval_bad_threshold.yaml  (+1 more)
schemas/: acs.schema.json  adp.schema.json  adpkg-metadata-v0.1.schema.json  evaluation.schema.json  flow.schema.json  runtime.schema.json
scripts/: validate.sh
sdk/go/: go.mod
sdk/python/: pyproject.toml
sdk/python/adp_sdk/: __init__.py  adp_model.py  adpkg.py  validation.py
sdk/python/tests/: test_adpkg.py  test_adpkg_extended.py  test_validation.py
spec/: README.md  acs-v0.1.md  adp-v0.1.0.md  adpkg-oci.md  compatibility.md  composition.md  conformance.md  esp.md  evaluation.md  flow.md  governance-provenance.md  interop-mapping.md  metrics-kpi-catalog.md  minimal.md  runtime.md
(+50 files in other folders)
